:sparkles: added an ordered list with roman numerals

--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <title>Advanced HTML5</title>
 </head>
 <body>
-    
+    <main>
+        <ol type="i">
+            <li>HyperText Markup Language</li>
+            <li>JavaScript</li>
+            <li>Cascading Style Sheets</li>
+            <li>React</li>
+            <li>Python</li>
+            <li>Flutter</li>
+            <li>Databases</li>
+        </ol>
+    </main>
 </body>
 </html>
