--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Advanced HTML5</title>
 </head>
 <body>
+    <header>
+        <h1>Coding is Life</h1>
+    </header>
     <main>
         <ol type="i">
             <li>HyperText Markup Language</li>
@@ -16,6 +19,7 @@
             <li>Flutter</li>
             <li>Databases</li>
         </ol>
+        <img src="https://images.pexels.com/photos/6804613/pexels-photo-6804613.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load" alt="coding screen">
     </main>
 </body>
 </html>
