--- a/index.html
+++ b/index.html
@@ -20,6 +20,42 @@
             <li>Databases</li>
         </ol>
         <img src="https://images.pexels.com/photos/6804613/pexels-photo-6804613.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load" alt="coding screen">
+        <table>
+            <th>Name</th>
+            <th>Address</th>
+            <th>Mobile</th>
+            <th>Email</th>
+            <tr>
+                <td>Darlene</td>
+                <td>123, NBO</td>
+                <td>07123456789</td>
+                <td>darlene@gmail.com</td>
+            </tr>
+            <tr>
+                <td>Billie</td>
+                <td>012, CHN</td>
+                <td>07124536789</td>
+                <td>billie@gmail.com</td>
+            </tr>
+            <tr>
+                <td>Brolin</td>
+                <td>234, NKR</td>
+                <td>07123456798</td>
+                <td>bro@gmail.com</td>
+            </tr>
+            <tr>
+                <td>Norman</td>
+                <td>345, MBS</td>
+                <td>07231456789</td>
+                <td>norm@gmail.com</td>
+            </tr>
+            <tr>
+                <td>Ann</td>
+                <td>456, UAE</td>
+                <td>07123654789</td>
+                <td>ann@gmail.com</td>
+            </tr>
+        </table>
     </main>
 </body>
 </html>
